# linkl-backend

./: Dockerfile  LICENSE  pyproject.toml  requirements.txt
.github/workflows/: codeql.yml  docker-image.yml
app/: __init__.py
models/: link.py  link1.py  link2.py  link3.py
routes/v1/: __init__.py  createlink.py  getlink.py  getlinkinfo.py  used.py
