[tool.poetry]
name = "Linkl-backend"
version = "0.0.1"
description = "linkl-backlend"
authors = ["tmddn3070 <tmddn3070@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.0"
uvicorn = "^0.15.0"
slowapi = "^0.1.5"
pydantic = "^1.10.4"
python-dotenv = "^0.19.1"
aiohttp = "^3.7.4"
asyncio = "^3.4.3"
motor = "^3.1.1"
hypercorn = "^0.14.3"
redis = {git = "https://github.com/redis/redis-py.git"}
httpx = "^0.23.1"
uvloop = "^0.17.0"

[tool.poetry.dev-dependencies]
black = "^23.1a1"
isort = "^5.9.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
